Bug 1434087, remove [moz-collapsed=true] attribute from minimal-xul.css and static atom r=bgrins
Differential Revision: https://phabricator.services.mozilla.com/D51015

UltraBlame original commit: 53ebedebdb63ded40f5f3fef677ccc60fa6deeac

--- a/toolkit/content/minimal-xul.css
+++ b/toolkit/content/minimal-xul.css
@@ -33,8 +33,7 @@
 }
 
 
-[collapsed="true"],
-[moz-collapsed="true"] {
+[collapsed="true"] {
   visibility: collapse;
 }
 
